--- a/desafios/d010/style.css
+++ b/desafios/d010/style.css
@@ -12,52 +12,72 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 header {
-    width: auto;
-    height: 150px;
     color: white;
     background-image: linear-gradient(#3CD983, #1A5C38);
 }
 header > h1 {
     text-align: center;
+    padding-top: 20px;
+    padding-bottom: 25px;
+    
 }
 header > p {
     text-align: center;
+    padding-bottom: 30px;
+}
+nav {
+    background-color: #1A5C38;
+    padding-left: 10px;
+    padding-bottom: 5px;
 }
 nav > a {
     text-decoration: none;
     color: white;
     font-weight: bold;
     text-align: left;
+    padding-right: 10px;
 }
 nav > a:hover {
     text-decoration: underline;
 }
 main {
-    width: auto;
+    max-width: 500px;
+    margin: auto;
     padding: 10px;
-    margin: 30px;
     background-color: white;
     border-radius: 5px;
+    text-align: center;
+}
+iframe {
+    width: 70vw;
+    height: 40vw;
+    padding: 20px 0px;
 }
 h1 {
     font: 3em;
 }
-#titulocorpo {
+main > h1 {
     font: 'idroid';
 }
 h2 {
     font: 1.5em 'idroid';
     color: green;
-    background-image: linear-gradient(90deg green, white);
+    background-image: linear-gradient(to right, rgb(190, 240, 190), white);
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 p {
     text-align: justify;
     text-indent: 35px;
     
 }
-iframe {
-    width: auto;
-    height: auto;
+ul {
+    margin: 10px;
+}
+picture {
+    margin: auto;
+}
+img {
     margin: auto;
 }
 footer {
