--- a/desafios/d010/style.css
+++ b/desafios/d010/style.css
@@ -1,88 +1,132 @@
 @font-face {
-    font-family: Idroid;
+    font-family: 'Idroid';
     src: url(fontes/idroid.otf);
 }
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+
+:root {
+    --cor0: #c5ebd6;
+    --cor1: #83e1ad;
+    --cor2: #3ddc84;
+    --cor3: #2fa866;
+    --cor4: #1a5c37;
+    --cor5: #063d1e;
+
+    --fonte-padrao: Arial, Verdana, Helvetica, sans-serif;
+    --fonte-destaque: 'Bebas Neue', 'Times New Roman', serif;
+    --fonte-andoid: 'Idroid', cursive;
+}
+
 * {
     padding: 0px;
     margin: 0px;
 }
 body {
-    background-color: #84E1AD;
-    font: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    background-color: var(--cor0);
+    font-family: var(--fonte-padrao);
 }
 header {
-    color: white;
-    background-image: linear-gradient(#3CD983, #1A5C38);
+    background-image: linear-gradient( var(--cor3), var(--cor5));
+    min-height: 150px;
+    text-align: center;
 }
 header > h1 {
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 25px;
+    font-family: var(--fonte-destaque);
+    font-size: 3em;
+    color: white;
+    padding-top: 40px;
+    padding-bottom: 20px;
+    text-shadow: 2px 2px 0px #0000004c;
     
 }
 header > p {
+    color: white;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 15px;
+    font-family: var(--fonte-padrao);
+    font-size: 1.2em;
+    max-width: 500px;
+    margin: auto;
     text-align: center;
-    padding-bottom: 30px;
+    text-shadow: 2px 2px 0px #0000004c;
 }
 nav {
-    background-color: #1A5C38;
-    padding-left: 10px;
-    padding-bottom: 5px;
+    background-color: var(--cor5);
+    box-shadow: 0px 7px 9px rgba(0, 0, 0, 0.4);
+    padding: 10px;
+    text-align: center;
 }
 nav > a {
     text-decoration: none;
     color: white;
     font-weight: bold;
-    text-align: left;
-    padding-right: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    transition-duration: 0.7s;
 }
 nav > a:hover {
-    text-decoration: underline;
+    background-color: var(--cor3);
+    color: var(--cor5);
 }
 main {
-    max-width: 500px;
+    min-width: 300px;
+    max-width: 1000px;
     margin: auto;
-    padding: 10px;
+    margin-bottom: 30px;
+    padding: 20px;
     background-color: white;
-    border-radius: 5px;
-    text-align: center;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.432);
 }
-iframe {
-    width: 70vw;
-    height: 40vw;
-    padding: 20px 0px;
+main > img {
+    width: 100%;
 }
-h1 {
-    font: 3em;
+main h1 {
+    color: var(--cor5);
+    font-family: var(--fonte-andoid);
 }
-main > h1 {
-    font: 'idroid';
+main h2 {
+    font-family: var(--fonte-andoid);
+    color: var(--cor4);
+    font-size: 1.3em;
+    background-image: linear-gradient(to right, var(--cor1), transparent 60%);
+    text-indent: 8px;
+
 }
-h2 {
-    font: 1.5em 'idroid';
-    color: green;
-    background-image: linear-gradient(to right, rgb(190, 240, 190), white);
-    margin-top: 10px;
-    margin-bottom: 10px;
-}
-p {
+main p {
     text-align: justify;
     text-indent: 35px;
-    
+    margin: 15px 0px;
+    line-height: 1.5em;
 }
-ul {
-    margin: 10px;
+main strong {
+    color: var(--cor4);
+    font-weight: bold;
 }
-picture {
-    margin: auto;
+main a {
+    text-decoration: none;
+    font-weight: bold;
+    color: var(--cor5);
+    background-color: var(--cor1);
+    padding: 2px 6px;
+}
+main a:hover {
+    text-decoration: underline;
+    color: var(--cor3);
 }
 img {
+    width: 100%;
+}
+img#pq {
+    max-width: 350px;
+    display: block;
     margin: auto;
 }
 footer {
     color: white;
-    background-color: rgb(0, 72, 0);
+    background-color: var(--cor5);
     text-align: center;
     margin: auto;
     padding: 5px;
