--- a/desafios/d010/style.css
+++ b/desafios/d010/style.css
@@ -25,6 +25,9 @@ body {
     background-color: var(--cor0);
     font-family: var(--fonte-padrao);
 }
+a.externo::after {
+    content: '\00A0\1F517';
+}
 header {
     background-image: linear-gradient( var(--cor3), var(--cor5));
     min-height: 150px;
@@ -36,8 +39,8 @@ header > h1 {
     color: white;
     padding-top: 40px;
     padding-bottom: 20px;
-    text-shadow: 2px 2px 0px #0000004c;
-    
+    text-shadow: 2px 2px 0px #0000004c;  
+    font-weight: normal; 
 }
 header > p {
     color: white;
@@ -59,7 +62,7 @@ nav {
 }
 nav > a {
     text-decoration: none;
-    color: white;
+    color: var(--cor1);
     font-weight: bold;
     padding: 10px;
     border-radius: 5px;
@@ -83,9 +86,25 @@ main {
 main > img {
     width: 100%;
 }
+div.video {
+    background-color: var(--cor5);
+    margin: 0px -20px 30px -20px;
+    padding: 20px;
+    padding-bottom: 56.75%;
+    position: relative;
+}
+div.video > iframe {
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+}
 main h1 {
     color: var(--cor5);
     font-family: var(--fonte-andoid);
+    font-weight: normal;
+    font-size: 1.8em;
 }
 main h2 {
     font-family: var(--fonte-andoid);
@@ -93,7 +112,7 @@ main h2 {
     font-size: 1.3em;
     background-image: linear-gradient(to right, var(--cor1), transparent 60%);
     text-indent: 8px;
-
+    font-weight: normal;
 }
 main p {
     text-align: justify;
@@ -124,13 +143,41 @@ img#pq {
     display: block;
     margin: auto;
 }
+aside {
+    background-color: var(--cor1);
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.311);
+}
+aside > h3 {
+    background-color: var(--cor4);
+    color: white;
+    padding: 10px;
+    margin: -10px -10px 0 -10px;
+    border-radius: 10px 10px 0px 0px;
+}
+aside > ul {
+    list-style-type: '\2714\00A0\00A0';
+    list-style-position: inside;
+    columns: 2;
+}
 footer {
     color: white;
     background-color: var(--cor5);
     text-align: center;
     margin: auto;
     padding: 5px;
+    font-size: 0.8em;
 }
 footer > p {
     text-align: center;
+}
+footer a {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+}
+footer a:hover {
+    text-decoration: underline;
+    color: var(--cor1);
 }
