--- a/desafios/d015/estilo/style.css
+++ b/desafios/d015/estilo/style.css
@@ -24,3 +24,10 @@ section#telefone {
     transform: translate(-50%, -50%);
     background: url('../imagens/frame-iphone.png') no-repeat;
 }
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    height: 471px;
+    width: 267px;
+}
