Criei os botões

--- a/desafios/d015/estilo/style.css
+++ b/desafios/d015/estilo/style.css
@@ -31,3 +31,16 @@ iframe#tela {
     height: 471px;
     width: 267px;
 }
+section#redes img {
+    width: 50px;
+    border-radius: 50%;
+    margin: 10px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.404);
+}
+section#redes img:hover {
+    border: 2px solid rgba(255, 255, 255, 0.557);
+    box-sizing: border-box;
+    transform: translate(2px, -2px);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.619);
+    transition: transform 0.4s, border 1.3s
+}
